test/oscar/compiler/errors/unitDecl.oscar
def main() => unit = {
  unit a = unit;
  Println(a);
}
